full-stack-with-Ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:v2
        imagePullPolicy: Never 
        ports:
        - containerPort: 3000 # Matches the internal port of your container
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80       # External port for HTTP web traffic
    targetPort: 3000 # Internal container port
  type: ClusterIP # Automatically provisions a public Azure IP address
